--- a/build-and-deploy-script.yml
+++ b/build-and-deploy-script.yml
@@ -1,1 +1,45 @@
+name: Trigger auto deployment for todoapi
 
+# When this action will be executed
+on:
+  # Automatically trigger it when detected changes in repo
+  push:
+    branches: 
+      [ master ]
+    paths:
+    - '**'
+    - '.github/workflows/todoapi-AutoDeployTrigger-c4103083-1dd7-499c-bbb3-f626f2c7e336.yml'
+
+  # Allow manual trigger 
+  workflow_dispatch:      
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    permissions: 
+      id-token: write #This is required for requesting the OIDC JWT Token
+      contents: read #Required when GH token is used to authenticate with private repo
+
+    steps:
+      - name: Checkout to the branch
+        uses: actions/checkout@v2
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.YOURAPI_AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.YOURAZURE_AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.YOUR_AZURE_SUBSCRIPTION_ID }}
+
+      - name: Build and push container image to registry
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          appSourcePath: ${{ github.workspace }} 
+          registryUrl:   yourregistry.azurecr.io
+          registryUsername: ${{ secrets.YOURAPI_REGISTRY_USERNAME }}
+          registryPassword: ${{ secrets.YOURAPI_REGISTRY_PASSWORD }}
+          containerAppName: yourcontainerapp
+          resourceGroup: rg-demo-app
+          imageToBuild: yourregistry.azurecr.io/yourcontainerapp:${{ github.sha }}
+          _buildArgumentsKey_: |
+            _buildArgumentsValues_
